--- a/DOM LAB 1/Weight Kilogram To Pounds/css/style.css
+++ b/DOM LAB 1/Weight Kilogram To Pounds/css/style.css
@@ -14,13 +14,51 @@ main
     background-color: tomato;
     display:grid;
     grid-template-columns: 1fr;
+  
 }
 
-div
+#container
 {
     width:40%;
     height: 60vh;
     background-color: white;
     justify-self: center;
     align-self: center;
+    padding: 20px 20px;
+}
+
+p
+{
+    padding-left: 165px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+button
+{
+    width:120px;
+    height: 40px;
+    margin-left: 170px;
+    margin-bottom: 10px;
+}
+
+#error
+{
+    color:red;
+    padding-top:15px;
+    padding-bottom:1
+    5px;
+}
+
+#results
+{
+    background-color: lightgray;
+    width:30%;
+    padding:20px 20px;
+    margin-left:150px;
+}
+
+.results
+{
+    color:green;
 }
